# ray-tracing

./: .gitignore  CMakeLists.txt  Readme.md  convert_ppm.py  main.cpp  main_shot.cpp  space.cpp
inputs/: cubo2.mtl  macaco.mtl  monkey.mtl
scenes/: sceneObj.cpp  templateScene.cpp
src/: Camera.cpp  Luz.cpp  Matrix.cpp  ObjReader.cpp  Point.cpp  Ray.cpp  Vector.cpp
src/Objetos/: BezierLine.cpp  Cilindro.cpp  Esfera.cpp  Face.cpp  Malha.cpp  Objeto.cpp  Plano.cpp  Tabuleiro.cpp
